feat: 验收评价体系改造为开源Skill
**核心变更**：

**需求规格说明书_v0.7**：
- 新增2.6节「验收标准Skill」
  - 验收标准改造：平台评价体系完全开源
  - 官方验收标准Skill：basic-review, security-review, performance-review, code-style-review
  - 参与者评分Skill：4维度综合评价
  - 社区贡献验收标准：开放提交机制

**架构设计文档_v0.7**：
- 新增数据表：
  - review_standards（验收标准Skill表）
  - project_review_standards（项目验收标准关联表）
  - task_reviews（验收记录表）
- 支持验收标准的项目级配置
- 验收结果记录和追溯

**场景设计文档_v0.7**：
- 场景四完全重写「发起人验收成果（使用验收标准Skill）」
- 新增步骤0：发起人选择验收标准Skill（项目创建时）
- 新增步骤2：查看验收标准详情（展示开源信息）
- 展示验收标准Skill生态：官方+社区贡献
- 开源地址：github.com/ai-projects-management/review-standards

**改造意义**：
- 去中心化：社区定义"什么是好"
- 透明：评价逻辑完全开源
- 可扩展：任何人都可以贡献验收标准
- 灵活：发起人选择适合自己的验收标准

--- a/architecture/架构设计文档_v0.7.md
+++ b/architecture/架构设计文档_v0.7.md
@@ -361,7 +361,125 @@ model SkillUsage {
   
   @@map("skill_usages")
 }
-```
+
+#### 4.1.5a 验收标准Skill表 (review_standards)
+
+```typescript
+model ReviewStandard {
+  id            String    @id @default(uuid())
+  name          String    // Skill名称
+  authorId      String
+  author        User      @relation(fields: [authorId], references: [id])
+  
+  // 类型
+  type          ReviewStandardType @default(COMMUNITY)
+  license       String    @default("MIT")
+  repoUrl       String?   // 开源仓库地址
+  
+  // 验收标准
+  criteria      Json      // 检查项列表
+  weights       Float[]   // 各项权重
+  minScore     Float     @default(4.0) // 最低通过分数
+  
+  // 自动化
+  automation    AutomationLevel @default(MANUAL)
+  autoTools    String[]  // 自动化工具
+  
+  // 统计
+  usageCount   Int       @default(0)
+  avgScore     Float?
+  
+  // 状态
+  status        ReviewStandardStatus @default(DRAFT)
+  isVerified    Boolean   @default(false) // 平台审核
+  
+  createdAt     DateTime  @default(now())
+  updatedAt     DateTime  @updatedAt
+  
+  @@map("review_standards")
+}
+
+enum ReviewStandardType {
+  OFFICIAL    // 平台官方
+  COMMUNITY   // 社区贡献
+  CUSTOM      // 自定义
+}
+
+enum AutomationLevel {
+  MANUAL      // 纯人工
+  SEMI_AUTO   // 半自动
+  AUTO        // 全自动
+}
+
+enum ReviewStandardStatus {
+  DRAFT
+  PUBLISHED
+  DEPRECATED
+}
+
+#### 4.1.5b 项目验收标准关联表 (project_review_standards)
+
+```typescript
+model ProjectReviewStandard {
+  id              String    @id @default(uuid())
+  projectId       String
+  project         Project   @relation(fields: [projectId], references: [id])
+  
+  reviewStandardId String
+  reviewStandard  ReviewStandard @relation(fields: [reviewStandardId], references: [id])
+  
+  // 项目特定配置
+  customCriteria  Json?     // 自定义检查项
+  customWeights  Float[]   // 自定义权重
+  
+  // 环节关联
+  milestoneIds    String[]  // 适用的环节ID列表
+  
+  createdAt       DateTime  @default(now())
+  
+  @@unique([projectId, reviewStandardId])
+  @@map("project_review_standards")
+}
+
+#### 4.1.5c 验收记录表 (task_reviews)
+
+```typescript
+model TaskReview {
+  id              String    @id @default(uuid())
+  taskId          String
+  task            Task      @relation(fields: [taskId], references: [id])
+  
+  reviewStandardId String
+  reviewStandard  ReviewStandard @relation(fields: [reviewStandardId], references: [id])
+  
+  // 验收结果
+  scores          Float[]   // 各项评分
+  totalScore      Float     // 总分
+  
+  // 自动化检查结果
+  autoCheckResults Json?    // 自动化工具检查结果
+  
+  // 人工评价
+  reviewerId      String?   // 验收人（发起人或指定）
+  comment         String?   // 评价说明
+  
+  // 验收操作
+  result          ReviewResult
+  requiresRevision Boolean  @default(false)
+  revisionReason  String?
+  
+  createdAt       DateTime  @default(now())
+  
+  @@map("task_reviews")
+}
+
+enum ReviewResult {
+  APPROVED
+  REJECTED
+  REVISION_REQUIRED
+}
+
+#### 4.1.6 项目表 (projects)
 
 #### 4.1.4 项目表 (projects)
 
