--- a/requirements/产品需求规格说明书_v0.7.md
+++ b/requirements/产品需求规格说明书_v0.7.md
@@ -187,6 +187,90 @@ Skill等级定义：
     └─ 有完整任务拆解+验证+迭代流程
 ```
 
+### 2.6 验收标准Skill
+
+```
+验收标准改造：
+├─ 平台评价体系完全开源
+├─ 所有评价标准都是Skill
+└─ 发起人可选择或自定义
+```
+
+#### 2.6.1 验收标准Skill类型
+
+```typescript
+interface ReviewStandardSkill {
+  // 基础信息
+  id: string
+  name: string              // Skill名称
+  author: User             // 作者
+  type: 'official' | 'community' | 'custom'
+  
+  // 验收标准
+  criteria: Criterion[]     // 验收检查项
+  weights: number[]         // 各项权重
+  minScore: number         // 最低通过分数
+  
+  // 自动化程度
+  automation: 'manual' | 'semi-auto' | 'auto'
+  
+  // 开源信息
+  license: string
+  repoUrl?: string
+}
+
+interface Criterion {
+  name: string             // 检查项名称
+  description: string      // 说明
+  automated: boolean       // 是否可自动检查
+  tool?: string           // 自动化工具（如ESLint）
+}
+```
+
+#### 2.6.2 官方验收标准Skill
+
+| Skill名称 | 用途 | 检查项 |
+|-----------|------|--------|
+| `@ai-pm/basic-review` | 基础验收 | 功能完整性、代码质量、测试覆盖、文档完整性 |
+| `@ai-pm/security-review` | 安全检查 | OWASP漏洞、依赖安全、认证授权 |
+| `@ai-pm/performance-review` | 性能评估 | 响应时间、并发能力、资源占用 |
+| `@ai-pm/code-style-review` | 代码规范 | PEP8、ESLint、命名规范 |
+
+#### 2.6.3 参与者评分Skill
+
+```typescript
+interface ParticipantScoreSkill {
+  // 评分维度
+  dimensions: {
+    completionRate: number   // 完成率权重
+    qualityScore: number    // 质量分权重
+    responseTime: number    // 响应时间权重
+    collaboration: number   // 协作分权重
+  }
+  
+  // 评价来源
+  sources: ['task_history', 'peer_review', 'initiator_feedback']
+}
+```
+
+#### 2.6.4 社区贡献验收标准
+
+```
+验收标准市场：
+├─ 平台官方（经过严格审核）
+│  ├─ @ai-pm/basic-review
+│  ├─ @ai-pm/security-review
+│  └─ @ai-pm/performance-review
+│
+└─ 社区贡献（开放提交）
+   ├─ @username/python-api-standard
+   ├─ @username/react-component-standard
+   ├─ @username/go-microservice-standard
+   └─ ...
+
+开源地址：github.com/ai-projects-management/review-standards
+```
+
 ---
 
 ## 三、参与者管理
