--- a/scenarios/场景设计文档_v0.7.md
+++ b/scenarios/场景设计文档_v0.7.md
@@ -295,14 +295,39 @@
 
 ---
 
-## 场景四：发起人验收成果
+## 场景四：发起人验收成果（使用验收标准Skill）
 
 ### 场景描述
-张三作为发起人，验收王五的交付成果。
+张三作为发起人，验收王五的交付成果。验收标准完全开源，使用Skill管理。
 
 ### 流程
 
 ```
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 0：发起人选择验收标准Skill（项目创建时）                      │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 项目创建时选择验收标准：                                             │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 选择验收标准Skill：                                               │   │
+│ │                                                                    │   │
+│ │ ☐ @ai-pm/basic-review (官方)                                     │   │
+│ │    检查项：功能完整性、代码质量、测试覆盖、文档完整性             │   │
+│ │                                                                    │   │
+│ │ ☑ @ai-pm/security-review (官方) ⭐推荐                            │   │
+│ │    检查项：OWASP漏洞、依赖安全、认证授权                           │   │
+│ │                                                                    │   │
+│ │ ☐ @username/python-api-standard (社区)                             │   │
+│ │    检查项：PEP8规范、类型提示、错误处理                            │   │
+│ │                                                                    │   │
+│ │ [+ 添加自定义标准]                                                │   │
+│ │                                                                    │   │
+│ │ 开源地址：github.com/ai-projects-management/review-standards       │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└─────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
 ┌─────────────────────────────────────────────────────────────────────────────┐
 │ 步骤 1：查看交付物                                                 │
 ├─────────────────────────────────────────────────────────────────────────────┤
@@ -313,41 +338,72 @@
 │ │     提交时间：10分钟前         预算：¥3,000                      │   │
 │ │                                                                    │   │
 │ │ 使用Skill：Python RESTful API 开发专家（李四）                    │   │
-│ │     验收通过率：96%                                              │   │
+│ │                                                                    │   │
+│ │ 验收标准：                                                         │   │
+│ │ ├─ @ai-pm/security-review (官方) ⭐                             │   │
+│ │ └─ @ai-pm/basic-review (官方)                                    │   │
 │ │                                                                    │   │
 │ │ 交付物：                                                         │   │
 │ │ ├─ GitHub PR：https://github.com/.../pull/1                   │   │
-│ │ ├─ 代码仓库：wang5/auth-api                                      │   │
 │ │ └─ 测试报告：覆盖率88%                                          │   │
 │ │                                                                    │   │
-│ │ [查看成果]  [查看Skill]  [通过验收]  [拒绝]  [要求修改]  │   │
+│ │ [查看成果]  [查看参与者Skill]  [查看验收标准] [通过验收]  [拒绝]  [要求修改]  │
 │ └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                            │
 └─────────────────────────────────────────────────────────────────────────────┘
                                     │
                                     ▼
 ┌─────────────────────────────────────────────────────────────────────────────┐
-│ 步骤 2：发起人验收                                                 │
+│ 步骤 2：查看验收标准详情                                           │
 ├─────────────────────────────────────────────────────────────────────────────┤
 │                                                                            │
-│ 验收界面：                                                          │
+│ 验收标准详情：                                                     │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 🛡️ @ai-pm/security-review (官方)                       ⭐推荐      │   │
+│ │ 作者：平台官方 | 开源：MIT License                            │   │
+│ │                                                                    │   │
+│ │ 检查项（4项）：                                                   │   │
+│ │ ┌───────────────────────────────────────────────────────────────┐  │   │
+│ │ │ 检查项              │ 权重 │ 自动化    │ 说明              │  │   │
+│ │ ├────────────────────┼──────┼───────────┼────────────────────┤  │   │
+│ │ │ OWASP漏洞检测       │ 30%  │ ⭐自动   │ dependency-check │  │   │
+│ │ │ 认证授权检查        │ 30%  │ 人工      │ JWT实现检查     │  │   │
+│ │ │ 依赖安全扫描        │ 20%  │ ⭐自动   │ npm audit      │  │   │
+│ │ │ 敏感信息处理        │ 20%  │ 人工      │ 日志/错误信息  │  │   │
+│ │ └───────────────────────────────────────────────────────────────┘  │   │
+│ │                                                                    │   │
+│ │ 开源地址：github.com/ai-projects-management/review-standards        │   │
+│ │                                                                    │   │
+│ │ [查看代码]  [提交改进PR]  [返回]                             │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└─────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 3：发起人验收（使用验收标准Skill）                            │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 验收界面（按验收标准自动展示）：                                     │
 │ ┌─────────────────────────────────────────────────────────────────────┐   │
 │ │ ✅ 验收 - 环节1：用户认证API开发                                 │   │
 │ │                                                                    │   │
+│ │ 验收标准：@ai-pm/security-review                                  │   │
+│ │                                                                    │   │
 │ │ 检查项：                                                          │   │
 │ │ ┌───────────────────────────────────────────────────────────────┐  │   │
-│ │ │ 检查项          │ 状态    │ 评分    │ 说明              │  │   │
-│ │ ├────────────────┼─────────┼─────────┼────────────────────┤  │   │
-│ │ │ 功能完整性     │ ✅通过 │ 5/5    │ 所有接口正常      │  │   │
-│ │ │ 代码质量       │ ✅通过 │ 4.5/5   │ 符合PEP8         │  │   │
-│ │ │ 测试覆盖       │ ✅通过 │ 5/5    │ 覆盖率88%        │  │   │
-│ │ │ 文档完整性     │ ✅通过 │ 4/5    │ 缺少错误码说明   │  │   │
-│ │ ├────────────────┼─────────┼─────────┼────────────────────┤  │   │
-│ │ │ 综合评分       │        │ 4.6/5   │ 验收通过          │  │   │
+│ │ │ 检查项              │ 状态    │ 评分    │ 说明              │  │   │
+│ │ ├────────────────────┼─────────┼─────────┼────────────────────┤  │   │
+│ │ │ OWASP漏洞检测      │ ✅通过 │ 5/5    │ 无漏洞发现       │  │   │
+│ │ │ 认证授权检查        │ ✅通过 │ 5/5    │ JWT实现完整     │  │   │
+│ │ │ 依赖安全扫描        │ ⚠️警告 │ 4/5    │ 1个低危警告     │  │   │
+│ │ │ 敏感信息处理        │ ✅通过 │ 5/5    │ 无敏感信息泄露 │  │   │
+│ │ ├────────────────────┼─────────┼─────────┼────────────────────┤  │   │
+│ │ │ 综合评分           │        │ 4.75/5  │ 验收通过          │  │   │
 │ │ └───────────────────────────────────────────────────────────────┘  │   │
 │ │                                                                    │   │
 │ │ 使用Skill：Python RESTful API 开发专家（李四）                    │   │
-│ │ 质量标准达标：✅                                                 │   │
+│ │ 验收标准开源：✅                                                 │   │
 │ │                                                                    │   │
 │ │ [通过验收]  [拒绝验收]  [要求修改]                             │   │
 │ └─────────────────────────────────────────────────────────────────────┘   │
@@ -356,7 +412,7 @@
                                     │
                                     ▼
 ┌─────────────────────────────────────────────────────────────────────────────┐
-│ 步骤 3：验收完成结算                                               │
+│ 步骤 4：验收完成结算                                               │
 ├─────────────────────────────────────────────────────────────────────────────┤
 │                                                                            │
 │ 结算：                                                             │
@@ -371,10 +427,33 @@
 │ │ ├─ 分成金额：¥3,000 × 35% = ¥1,050                            │   │
 │ │ └─ 结算时间：立即到账                                            │   │
 │ │                                                                    │   │
+│ │ 验收标准：@ai-pm/security-review (官方)                           │   │
+│ │ 开源地址：github.com/ai-projects-management/review-standards     │   │
+│ │                                                                    │   │
 │ │ 💰 支付成功 - ¥1,050 已转入王五账户                           │   │
 │ └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                            │
 └─────────────────────────────────────────────────────────────────────────────┘
+```
+
+---
+
+### 验收标准Skill生态
+
+```
+验收标准完全开源：
+├─ 平台官方（经过严格审核）
+│  ├─ @ai-pm/basic-review       - 基础验收
+│  ├─ @ai-pm/security-review    - 安全检查
+│  └─ @ai-pm/performance-review - 性能评估
+│
+└─ 社区贡献（开放提交）
+   ├─ @username/python-api-standard
+   ├─ @username/react-component-standard
+   ├─ @username/go-microservice-standard
+   └─ ...
+
+开源地址：github.com/ai-projects-management/review-standards
 ```
 
 ---
