feat: 社区共治体系 - 没有权威，只有历史
**核心思想**：
- 平台不做价值判断，只维护系统
- 信用来自历史记录，谁都看得见，谁也改不了
- 社区共治 = 防止系统被破坏，不判断内容好坏

**需求规格说明书_v0.7**：
- 新增第二章「社区共治」
  - 核心理念：没有权威，只有历史
  - 平台角色转变：从提供+审核 → 维护+执行
  - 社区共治边界：治理范围和不做事项
  - 信用体系设计：Skill/参与者/发起人/验收标准的信用来源
  - 社区治理机制：举证、惩罚、申诉
  - 历史记录不可篡改原则
  - 信用算法设计原则

**架构设计文档_v0.7**：
- 新增4.1.7节「信用历史记录表」
  - user_credit_history（用户信用历史）
  - user_credit_snapshot（用户信用快照）
  - skill_credit_history（Skill信用历史）
  - skill_credit_snapshot（Skill信用快照）
  - governance_records（社区治理记录）
  - 信用查询API设计
  - 信用算法设计原则
  - 历史记录不可篡改实现

**场景设计文档_v0.7**：
- 新增场景七「社区共治」
  - 场景A：查看参与者的信用历史
  - 场景B：查看Skill的信用历史
  - 场景C：社区举证（虚假交易）
  - 场景D：社区举证（抄袭洗稿）
  - 场景E：惩罚执行与申诉
  - 社区共治总结

**关键结论**：
- 经验提供者的信用，不来自任何机构的认证
- 只来自他过去的经验被多少人采用、帮多少人成了事
- 这些记录都在链上（数据库里），谁都看得见，谁也改不了

--- a/architecture/架构设计文档_v0.7.md
+++ b/architecture/架构设计文档_v0.7.md
@@ -479,6 +479,236 @@ enum ReviewResult {
   REVISION_REQUIRED
 }
 
+#### 4.1.7 信用历史记录表（核心：没有权威，只有历史）
+
+```typescript
+// 信用来源 = 历史记录总和
+// 记录一旦写入不可修改，谁都看得见
+
+// 4.1.7a 用户信用历史记录
+model UserCreditHistory {
+  id              String    @id @default(uuid())
+  userId          String
+  user            User      @relation(fields: [userId], references: [id])
+  
+  // 信用类型
+  creditType       CreditType
+  
+  // 信用变化
+  change          Float     // 变化值（正/负）
+  previousScore   Float     // 变化前分数
+  newScore        Float     // 变化后分数
+  
+  // 来源
+  sourceType      SourceType  // 来源类型
+  sourceId        String?     // 来源ID（项目/Skill/验收标准等）
+  sourceName      String?     // 来源名称（便于展示）
+  
+  // 附加信息
+  description     String?     // 描述
+  metadata        Json?       // 附加数据
+  
+  // 记录不可篡改
+  createdAt       DateTime  @default(now())
+  
+  @@index([userId, creditType])
+  @@map("user_credit_history")
+}
+
+enum CreditType {
+  PARTICIPANT_CREDIT   // 参与者信用
+  INITIATOR_CREDIT    // 发起人信用
+  SKILL_CREDIT        // Skill信用
+  REVIEW_STANDARD_CREDIT // 验收标准信用
+}
+
+enum SourceType {
+  PROJECT_COMPLETED    // 项目完成
+  TASK_APPROVED       // 任务验收通过
+  TASK_REJECTED       // 任务验收拒绝
+  GOOD_REVIEW         // 好评
+  BAD_REVIEW          // 差评
+  PUNISHMENT          // 惩罚
+  REPORT              // 举报（对方被惩罚）
+}
+
+// 4.1.7b 用户当前信用快照（便于快速查询）
+model UserCreditSnapshot {
+  userId          String    @id @default(uuid())
+  user            User      @relation(fields: [userId], references: [id])
+  
+  // 各维度信用
+  participantScore Float     @default(0)  // 参与者信用
+  initiatorScore  Float     @default(0)   // 发起人信用
+  
+  // 统计
+  totalProjects   Int       @default(0)   // 参与项目数
+  completedTasks  Int       @default(0)   // 完成任务数
+  approvalRate    Float     @default(0)   // 验收通过率
+  goodReviewRate  Float     @default(0)   // 好评率
+  
+  // 惩罚记录
+  punishmentCount Int       @default(0)   // 被惩罚次数
+  
+  // 时间戳
+  updatedAt      DateTime  @updatedAt
+  
+  @@map("user_credit_snapshots")
+}
+
+// 4.1.7c Skill信用历史记录
+model SkillCreditHistory {
+  id              String    @id @default(uuid())
+  skillId         String
+  
+  // 信用变化
+  change          Float
+  previousScore   Float
+  newScore        Float
+  
+  // 来源
+  sourceType      SourceType
+  sourceId        String?   // 使用该Skill的任务ID
+  sourceName      String?   // 项目名称
+  
+  description     String?
+  
+  createdAt       DateTime  @default(now())
+  
+  @@index([skillId])
+  @@map("skill_credit_history")
+}
+
+// 4.1.7d Skill信用快照
+model SkillCreditSnapshot {
+  skillId         String    @id
+  
+  // 统计
+  usageCount      Int       @default(0)   // 使用次数
+  approvalRate    Float     @default(0)   // 验收通过率
+  goodReviewRate  Float     @default(0)   // 好评率
+  averageScore    Float     @default(0)   // 平均评分
+  
+  updatedAt      DateTime  @updatedAt
+  
+  @@map("skill_credit_snapshots")
+}
+
+// 4.1.7e 社区治理记录（举证-惩罚机制）
+model GovernanceRecord {
+  id              String    @id @default(uuid())
+  
+  // 举报类型
+  reportType      ReportType
+  
+  // 举报内容
+  targetId        String    // 被举报人ID
+  targetType      TargetType
+  evidence        String    // 证据描述
+  evidenceUrls    String[]  // 证据链接
+  
+  // 处理结果
+  status          GovernanceStatus @default(PENDING)
+  decision        String?   // 处理决定
+  punishType      PunishType? // 惩罚类型
+  punishDuration  Int?      // 惩罚时长（天）
+  
+  // 举证者
+  reporterId      String
+  
+  // 社区投票
+  supportVotes    Int       @default(0)   // 支持举报
+  opposeVotes     Int       @default(0)   // 反对举报
+  
+  // 时间戳
+  reportedAt      DateTime  @default(now())
+  resolvedAt      DateTime?
+  
+  @@map("governance_records")
+}
+
+enum ReportType {
+  FAKE_TRANSACTION   // 虚假交易
+  PLAGIARISM        // 抄袭洗稿
+  MALICIOUS_REVIEW  // 恶意差评
+  FAKE_REVIEW       // 刷好评
+  OTHER             // 其他
+}
+
+enum TargetType {
+  USER
+  SKILL
+  REVIEW_STANDARD
+}
+
+enum GovernanceStatus {
+  PENDING     // 待处理
+  VOTING      // 投票中
+  RESOLVED    // 已解决
+  DISMISSED   // 驳回
+}
+
+enum PunishType {
+  WARNING     // 警告
+  FREEZE      // 冻结
+  BAN         // 封禁
+  PUBLIC_SHAME // 公开记录
+}
+
+#### 4.1.8 信用查询API
+
+```typescript
+// 查询用户的信用历史
+GET /api/users/:id/credit-history
+
+// 查询用户的信用快照
+GET /api/users/:id/credit-snapshot
+
+// 查询Skill的信用历史
+GET /api/skills/:id/credit-history
+
+// 查询Skill的信用快照
+GET /api/skills/:id/credit-snapshot
+
+// 查询治理记录
+GET /api/governance?status=resolved
+
+// 提交举报
+POST /api/governance/report
+```
+
+#### 4.1.9 信用算法设计原则
+
+```
+信用计算原则：
+├─ 时间衰减：越近的行为权重越高
+├─ 成功溢价：完成项目权重 > 未完成
+├─ 好评加成：好评 + 信用，差评 - 信用
+├─ 惩罚倍增：一次作恶代价 >> 收益
+└─ 多维度：数量、质量、好评率分开计算
+
+具体公式：
+├─ 参与者信用 = 完成率×40 + 质量分×40 + 好评率×20
+├─ Skill信用 = 采用数×0.3 + 通过率×0.5 + 好评率×0.2
+└─ 发起人信用 = 完成率×0.5 + 好评率×0.3 + 惩罚次数×-0.2
+```
+
+#### 4.1.10 历史记录不可篡改
+
+```
+实现方式：
+├─ 所有记录写入后不可修改
+├─ 所有记录公开透明
+├─ 任何人都可以查询历史
+└─ 信用由历史写就，没有权威
+
+查询权限：
+├─ 发起人可查参与者历史
+├─ 参与者可查发起人历史
+├─ 任何人可查Skill历史
+└─ 任何人可查验收标准历史
+```
+
 #### 4.1.6 项目表 (projects)
 
 #### 4.1.4 项目表 (projects)
