--- a/requirements/产品需求规格说明书_v0.7.md
+++ b/requirements/产品需求规格说明书_v0.7.md
@@ -78,7 +78,160 @@
 
 ---
 
-## 二、Skill设计
+## 二、社区共治
+
+### 2.1 核心理念：没有权威，只有历史
+
+```
+┌─────────────────────────────────────────────────────────────────────────────┐
+│                   社区共治的核心逻辑                                    │
+│                                                                             │
+│  平台不做价值判断，只维护系统                                               │
+│                                                                             │
+│      经验提供者的信用                                                      │
+│          │                                                                │
+│          ▼                                                                │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │  信用来源 = 历史记录总和                                            │   │
+│  │       ├─ 被多少人采用                                              │   │
+│  │       ├─ 帮多少人成了事                                            │   │
+│  │       └─ 记录都在数据库里，谁都看得见，谁也改不了                 │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
+
+### 2.2 平台角色转变
+
+| 之前 | 现在 |
+|------|------|
+| 平台提供Skill市场（官方审核） | 平台只维护系统（记录所有行为） |
+| 平台判定验收标准好坏 | 平台展示历史记录（让市场选择） |
+| 平台计算参与者评分 | 平台记录历史数据（信用由历史写就） |
+| 平台有最终判定权 | 平台只执行规则（社区举证） |
+
+### 2.3 社区共治边界
+
+```
+社区共治 = 防止系统被破坏，不判断内容好坏
+
+平台治理：
+├─ 虚假交易？→ 社区举证 → 平台冻结
+├─ 抄袭洗稿？→ 社区举证 → 平台封禁
+├─ 恶意差评？→ 社区举证 → 平台惩罚
+└─ 刷好评？→ 社区举证 → 平台封禁
+
+平台不做：
+├─ 不判定"这个Skill好不好"（让历史说话）
+├─ 不审核"这个验收标准对不对"（让用户选择）
+├─ 不决定"这个参与者评分多少"（让数据说话）
+└─ 不做价值判断，只维护规则
+```
+
+### 2.4 信用体系设计
+
+```
+信用来源 = 历史记录总和
+
+┌─────────────────────────────────────────────────────────────────────────────┐
+│                         信用体系设计                                    │
+│                                                                             │
+│  1. Skill信用                                                              │
+│     ├─ 被多少项目采用（采用数）                                         │   │
+│     ├─ 验收通过率（成功率）                                             │   │
+│     ├─ 发起人好评率                                                     │   │
+│     └─ 信用 = 历史记录总和（链上可查）                                  │   │
+│                                                                             │
+│  2. 参与者信用                                                            │
+│     ├─ 参与过多少项目（项目数）                                         │   │
+│     ├─ 成功交付率（完成任务数/承接任务数）                              │   │
+│     ├─ 发起人好评率                                                     │   │
+│     └─ 信用 = 历史记录总和                                              │   │
+│                                                                             │
+│  3. 发起人信用                                                            │
+│     ├─ 发布过多少项目（项目数）                                         │   │
+│     ├─ 项目完成率（完成项目数/发布项目数）                             │   │
+│     ├─ 参与者好评率                                                     │   │
+│     └─ 信用 = 历史记录总和                                              │   │
+│                                                                             │
+│  4. 验收标准信用                                                          │
+│     ├─ 被多少项目使用（使用数）                                         │   │
+│     ├─ 验收通过率（使用该标准的项目通过率）                             │   │
+│     └─ 信用 = 历史记录总和                                              │   │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
+
+### 2.5 社区治理机制
+
+```
+┌─────────────────────────────────────────────────────────────────────────────┐
+│                       社区治理机制                                      │
+│                                                                             │
+│  1. 举证机制                                                              │
+│     ├─ 任何人可以举证（提交证据）                                        │   │
+│     ├─ 社区成员可以附议（支持/反对）                                    │   │
+│     ├─ 达到阈值则平台执行                                                │   │
+│     └─ 举证需押注积分（防止恶意举证）                                    │   │
+│                                                                             │
+│  2. 惩罚机制                                                              │
+│     ├─ 虚假交易：冻结账户                                               │   │
+│     ├─ 抄袭洗稿：封禁+公开记录                                          │   │
+│     ├─ 恶意差评：扣除信用分                                             │   │
+│     └─ 刷好评：封禁+公开记录                                            │   │
+│                                                                             │
+│  3. 申诉机制                                                              │
+│     ├─ 被惩罚者可申诉                                                   │   │
+│     ├─ 提交证据反驳                                                     │   │
+│     └─ 社区投票决定                                                     │   │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
+
+### 2.6 历史记录不可篡改
+
+```
+记录原则：
+├─ 所有行为都有记录
+├─ 记录一旦写入不可修改
+├─ 记录公开透明，谁都看得见
+└─ 记录是信用唯一来源
+
+记录内容：
+├─ 项目创建记录
+├─ 任务认领记录
+├─ 成果提交记录
+├─ 验收通过/拒绝记录
+├─ 信用变更记录
+└─ 惩罚记录
+
+查询方式：
+├─ 发起人可查参与者的历史记录
+├─ 参与者可查发起人的历史记录
+├─ 任何人可查Skill的历史记录
+└─ 任何人可查验收标准的历史记录
+```
+
+### 2.7 信用算法的设计原则
+
+```
+信用算法：
+├─ 长期行为权重更高（防止短期刷分）
+├─ 成功案例权重更高（帮多少人成了事）
+├─ 多维度综合评估（不只是数量）
+└─ 透明可审计（算法开源）
+
+具体设计：
+├─ 时间衰减：越近的行为权重越高
+├─ 成功溢价：完成项目的权重高于未完成
+├─ 好评加成：好评增加信用，差评减少信用
+├─ 惩罚倍增：一次作恶的代价远大于收益
+└─ 多维度：数量、质量、好评率分开计算
+```
+
+---
+
+## 三、Skill设计
 
 ### 2.1 Skill定义
 
