feat: 初始信用Skill体系 - 解决冷启动问题
**核心思想**：
- 新用户没有历史记录，需要初始信用评价
- 初始信用Skill本身也是开源的，可被社区替代
- 初始信用权重随时间递减，长期信用更重要

**需求规格说明书_v0.7**：
- 新增2.8节「初始信用与评价Skill」
  - 问题：新用户没有历史记录，怎么评估？
  - 解决方案：初始信用Skill（技能测试+作品集+同行评议）
  - 官方初始信用Skill：@ai-pm/initial-credit
  - 社区贡献初始信用Skill：可替代官方版本
  - 初始信用与长期信用的关系

**架构设计文档_v0.7**：
- 新增4.1.11节「初始信用评估表」
  - initial_credit_skills（初始信用Skill表）
  - user_initial_credits（用户初始信用记录）
  - skill_test_results（技能测试记录）
  - portfolio_evaluations（作品集评估记录）
  - peer_review_results（同行评议记录）
  - user_final_credits（最终信用计算）
  - 初始信用查询API
  - 初始信用计算公式示例

**关键特点**：
- 可替代：社区可以提供更好的初始评价Skill
- 可修改：算法开源，社区可以PR改进
- 低权重：初始分只影响冷启动，长期信用更重要

**最终信用公式**：
- 最终信用 = 初始信用×衰减权重 + 长期信用×(1-衰减权重)
- 初始信用权重：3个月内1.0，之后每月递减0.1，最低0.1

--- a/architecture/架构设计文档_v0.7.md
+++ b/architecture/架构设计文档_v0.7.md
@@ -826,239 +826,176 @@ enum SettlementStatus {
   PENDING
   COMPLETED
   FAILED
+
+#### 4.1.11 初始信用评估表（解决冷启动）
+
+```typescript
+// 4.1.11a 初始信用Skill表
+model InitialCreditSkill {
+  id            String    @id @default(uuid())
+  name          String    // Skill名称
+  authorId      String
+  author        User      @relation(fields: [authorId], references: [id])
+  
+  // 类型
+  type          InitialCreditSkillType @default(COMMUNITY)
+  license       String    @default("MIT")
+  repoUrl       String?   // 开源仓库地址
+  
+  // 评价维度
+  dimensions      Json      // 技能测试、作品集、同行评议等
+  
+  // 计算公式
+  calculation    Json      // 初始分计算公式
+  
+  // 统计
+  usageCount    Int       @default(0)
+  avgInitialScore Float?
+  
+  // 状态
+  status        InitialCreditSkillStatus @default(DRAFT)
+  isVerified    Boolean   @default(false)
+  
+  createdAt     DateTime  @default(now())
+  updatedAt     DateTime  @updatedAt
+  
+  @@map("initial_credit_skills")
+}
+
+enum InitialCreditSkillType {
+  OFFICIAL
+  COMMUNITY
+}
+
+enum InitialCreditSkillStatus {
+  DRAFT
+  PUBLISHED
+  DEPRECATED
+}
+
+// 4.1.11b 用户初始信用记录
+model UserInitialCredit {
+  userId          String    @id
+  user            User      @relation(fields: [userId], references: [id])
+  skillId         String
+  skill           InitialCreditSkill @relation(fields: [skillId], references: [id])
+  
+  skillTestScore  Float?    // 技能测试分数
+  portfolioScore   Float?    // 作品集分数
+  peerReviewScore  Float?    // 同行评议分数
+  
+  initialScore     Float     // 加权总分
+  evaluatedAt     DateTime  @default(now())
+  expiresAt       DateTime   // 过期时间（3-6个月）
+  
+  @@map("user_initial_credits")
+}
+
+// 4.1.11c 技能测试记录
+model SkillTestResult {
+  id              String    @id @default(uuid())
+  userId          String
+  user            User      @relation(fields: [userId], references: [id])
+  testType        String
+  score           Float
+  totalQuestions  Int
+  correctAnswers  Int
+  details         Json
+  skillId         String
+  createdAt       DateTime  @default(now())
+  
+  @@index([userId, testType])
+  @@map("skill_test_results")
+}
+
+// 4.1.11d 作品集评估记录
+model PortfolioEvaluation {
+  id              String    @id @default(uuid())
+  userId          String
+  user            User      @relation(fields: [userId], references: [id])
+  portfolioUrl    String
+  evaluationType  EvaluationType
+  aiScore         Float?
+  aiAnalysis      Json?
+  manualReview    Boolean   @default(false)
+  manualScore     Float?
+  manualComment   String?
+  reviewerId      String?
+  skillId         String
+  createdAt       DateTime  @default(now())
+  
+  @@map("portfolio_evaluations")
+}
+
+enum EvaluationType {
+  AI_AUTO
+  MANUAL
+  HYBRID
+}
+
+// 4.1.11e 同行评议记录
+model PeerReviewResult {
+  id              String    @id @default(uuid())
+  userId          String
+  user            User      @relation(fields: [userId], references: [id])
+  reviewerId      String
+  reviewer        User      @relation(fields: [reviewerId], references: [id])
+  score           Float
+  comment         String?
+  reviewerMinCredit Float
+  skillId         String
+  createdAt       DateTime  @default(now())
+  
+  @@unique([userId, reviewerId, skillId])
+  @@map("peer_review_results")
+}
+
+// 4.1.11f 最终信用计算
+model UserFinalCredit {
+  userId          String    @id
+  user            User      @relation(fields: [userId], references: [id])
+  initialScore     Float
+  initialWeight    Float     @default(1.0)
+  initialExpiresAt DateTime?
+  longTermScore   Float
+  finalScore      Float
+  calculatedAt    DateTime  @default(now())
+  
+  @@map("user_final_credits")
 }
 ```
 
----
+#### 4.1.12 初始信用查询API
 
-## 五、API设计
-
-### 5.1 API端点清单
-
-#### Skill模块 (/api/v1/skills)
-
-| 方法 | 端点 | 描述 | 权限 |
-|------|------|------|------|
-| POST | /api/v1/skills | 创建Skill | 登录用户 |
-| GET | /api/v1/skills | 获取Skill列表 | 公开 |
-| GET | /api/v1/skills/:id | 获取Skill详情 | 公开 |
-| PUT | /api/v1/skills/:id | 更新Skill | 作者 |
-| DELETE | /api/v1/skills/:id | 删除Skill | 作者 |
-| POST | /api/v1/skills/:id/publish | 发布到社区 | 作者 |
-| POST | /api/v1/skills/:id/import | 导入Skill | 登录用户 |
-| GET | /api/v1/skills/:id/export | 导出Skill (MCP格式) | 公开 |
-
-#### 任务模块 (/api/v1/tasks)
-
-| 方法 | 端点 | 描述 | 权限 |
-|------|------|------|------|
-| GET | /api/v1/tasks | 任务大厅 | 登录用户 |
-| GET | /api/v1/tasks/my | 我的任务 | 登录用户 |
-| POST | /api/v1/tasks/:id/claim | 认领任务 | 登录用户 |
-| GET | /api/v1/tasks/:id | 任务详情 | 参与者 |
-| POST | /api/v1/tasks/:id/submit | 提交成果 | 参与者 |
-| POST | /api/v1/tasks/:id/review | 验收任务 | 发起人 |
-
-#### CLI专用 (/api/v1/cli)
-
-| 方法 | 端点 | 描述 |
-|------|------|------|
-| GET | /api/v1/cli/sync | 同步任务到本地 |
-| POST | /api/v1/cli/notify | 接收GitHub Webhook |
-| GET | /api/v1/cli/export-skill | 导出Skill为MCP格式 |
-
----
-
-## 六、CLI客户端设计
-
-### 6.1 CLI功能
-
-```bash
-# 任务管理
-aipm task list              # 列出可认领任务
-aipm task claim <id>      # 认领任务
-aipm task pull             # 同步任务到本地
-aipm task submit           # 提交成果
-
-# Skill管理
-aipm skill list            # 列出我的Skill
-aipm skill create          # 创建Skill
-aipm skill export <id>     # 导出为MCP格式
-aipm skill import <file>    # 导入Skill
-
-# 项目管理
-aipm project list          # 列出我的项目
-aipm project info <id>     # 项目详情
-
-# 验收查询
-aipm review status         # 查看验收状态
-aipm review result         # 查看验收结果
+```typescript
+GET /api/v1/users/:id/initial-credit
+GET /api/v1/initial-credit-skills
+POST /api/v1/users/:id/skill-test
+POST /api/v1/users/:id/portfolio
+GET /api/v1/users/:id/peer-reviews
+GET /api/v1/users/:id/final-credit
 ```
 
-### 6.2 CLI与平台交互
+#### 4.1.13 初始信用计算公式示例
 
-```
-CLI工作流：
-
-1. 登录认证
-   aipm login → 获取JWT Token
-
-2. 同步任务
-   aipm task pull → 从平台拉取任务详情
-
-3. 本地开发
-   # 用Claude/Cursor/Codex开发
-   # 加载Skill（自己的/社区的）
-
-4. 提交成果
-   aipm task submit --pr=<GitHub PR URL>
-   → 通知平台：任务已提交
-
-5. 验收结果
-   aipm review result
-   → 查看发起人验收结果
-```
-
-### 6.3 Skill导出为MCP格式
-
-```
-Skill导出结构：
-{
-  "name": "skill-name",
-  "description": "...",
-  "prompts": [
-    {
-      "name": "prompt-name",
-      "template": "You are an expert in..."
-    }
-  ],
-  "workflow": [
-    {"step": 1, "description": "..."}
-  ],
-  "qualityStandard": {...}
+```typescript
+// @ai-pm/initial-credit 官方初始信用Skill
+const officialInitialCreditSkill = {
+  name: "@ai-pm/initial-credit",
+  dimensions: {
+    skillTest: { weight: 0.4, testTypes: ["python", "javascript"] },
+    portfolio: { weight: 0.4, evaluationType: "AI_AUTO" },
+    peerReview: { weight: 0.2, minReviewerCredit: 100 }
+  },
+  calculateInitialScore: (scores) => {
+    return scores.skillTestScore * 0.4 + scores.portfolioScore * 0.4 + scores.peerReviewScore * 0.2
+  }
 }
 
-在Claude Desktop中使用：
-1. 导出为JSON
-2. 复制到Claude的MCP配置目录
-3. 自动加载到上下文中
+// 最终信用计算（初始信用随时间衰减）
+const calculateFinalCredit = (initialScore, longTermScore, months) => {
+  const initialWeight = Math.max(1.0 - (months - 3) * 0.1, 0.1)
+  return initialScore * initialWeight + longTermScore * (1.0 - initialWeight)
+}
 ```
 
----
-
-## 七、部署架构
-
-### 7.1 开发环境
-
-```
-本地开发：
-├─ 前端：Vue 3 (localhost:3000)
-├─ 后端：Fastify (localhost:3001)
-└─ 数据库：SQLite文件
-```
-
-### 7.2 生产环境
-
-```
-生产部署：
-┌─────────────────────────────────────────────────────────────┐
-│                   Docker Compose                              │
-│   ├─ api (Fastify):3001                                   │
-│   ├─ web (Vue Build):80                                  │
-│   ├─ db (PostgreSQL):5432                                │
-│   └─ redis (可选):6379                                    │
-└─────────────────────────────────────────────────────────────┘
-```
-
----
-
-## 八、开发计划
-
-### 8.1 MVP阶段（核心功能）
-
-| 阶段 | 功能 | 时间 |
-|------|------|------|
-| **Phase 1** | 环境搭建 + 用户系统 | 1周 |
-| **Phase 2** | 项目发布 + 任务大厅 | 1周 |
-| **Phase 3** | 任务认领 + 成果提交 | 1周 |
-| **Phase 4** | 发起人验收 + 结算 | 1周 |
-| **Phase 5** | CLI客户端 | 1周 |
-
-### 8.2 MVP功能清单
-
-```
-MVP功能（P0必须）：
-
-用户系统：
-├─ 注册/登录
-├─ 个人档案
-└─ Skill管理
-
-项目管理：
-├─ 发布项目
-├─ 项目列表
-└─ 项目详情
-
-任务系统：
-├─ 任务大厅
-├─ 任务认领
-├─ 成果提交
-└─ 发起人验收
-
-结算系统：
-├─ 验收后结算
-└─ 分成计算
-
-CLI客户端：
-├─ 任务同步
-├─ 成果提交
-└─ Skill导入/导出
-
-P1可选：
-├─ Skill市场
-├─ Skill评分
-└─ MCP集成
-```
-
----
-
-## 九、目录结构
-
-```
-ai-project-management/
-├── api/                    # 后端源码
-│   ├── src/
-│   │   ├── entities/     # 数据实体
-│   │   ├── repositories/ # 数据访问
-│   │   ├── services/    # 业务逻辑
-│   │   ├── routes/      # 路由
-│   │   ├── middlewares/ # 中间件
-│   │   └── utils/       # 工具
-│   ├── prisma/          # ORM配置
-│   └── package.json
-│
-├── web/                    # 前端源码
-│   ├── src/
-│   │   ├── views/       # 页面
-│   │   ├── components/  # 组件
-│   │   ├── stores/      # Pinia
-│   │   └── utils/       # 工具
-│   └── package.json
-│
-├── cli/                     # CLI客户端 ⭐
-│   ├── src/
-│   │   ├── commands/    # 命令实现
-│   │   ├── services/    # 服务层
-│   │   └── utils/       # 工具
-│   └── package.json
-│
-├── docker-compose.yml
-├── README.md
-└── IMPLEMENTATION_PLAN.md
-```
-
----
-
-**文档版本**: v0.7
-**更新日期**: 2026-02-18
-**核心原则**：优秀的人的经验以Skill方式用于项目各环节
