--- a/requirements/产品需求规格说明书_v0.7.md
+++ b/requirements/产品需求规格说明书_v0.7.md
@@ -229,6 +229,144 @@
 └─ 多维度：数量、质量、好评率分开计算
 ```
 
+### 2.8 初始信用与评价Skill（解决冷启动）
+
+```
+问题：新用户没有历史记录，怎么评估？
+
+解决方案：
+├─ 初始信用 = 平台提供的客观基础评价（开源Skill）
+│  ├─ 技能测试结果
+│  ├─ 作品集评估
+│  └─ 同行评议（如果有）
+│
+└─ 长期信用 = 历史记录总和（由用户选择写就）
+    ├─ 被多少人采用
+    ├─ 帮多少人成了事
+    └─ 这些记录都在数据库里
+
+关键：初始信用评价体系本身也是开源的，可被社区修改/替代
+```
+
+#### 2.8.1 初始信用Skill设计
+
+```typescript
+interface InitialCreditSkill {
+  // 基础信息
+  id: string
+  name: string              // Skill名称
+  author: User             // 作者
+  type: 'official' | 'community'  // 官方/社区
+  
+  // 评价维度
+  dimensions: {
+    skillTest: {
+      enabled: boolean
+      weight: number        // 权重，如0.4
+      testUrl: string      // 测试链接
+    }
+    portfolio: {
+      enabled: boolean
+      weight: number        // 权重，如0.4
+      autoScore?: string   // 自动评分工具
+    }
+    peerReview: {
+      enabled: boolean
+      weight: number        // 权重，如0.2
+      reviewers?: string[]  // 指定评审人
+    }
+  }
+  
+  // 初始分计算
+  calculateInitialScore: (dimensions: {
+    skillTestScore: number
+    portfolioScore: number
+    peerReviewScore: number
+  }) => number
+  
+  // 开源信息
+  license: string
+  repoUrl?: string
+}
+```
+
+#### 2.8.2 官方初始信用Skill（@ai-pm/initial-credit）
+
+```
+@ai-pm/initial-credit（平台官方）：
+
+评价维度：
+├─ 技能测试（40%）
+│  ├─ 在线编程测试
+│  ├─ 算法题目
+│  └─ 代码质量评估
+│
+├─ 作品集评估（40%）
+│  ├─ 提交GitHub链接
+│  ├─ AI自动分析代码质量
+│  └─ 人工复核（可选）
+│
+└─ 同行评议（20%）
+    ├─ 其他用户的公开评价
+    └─ 需达到一定信用门槛才能评价
+
+初始分 = 技能测试×0.4 + 作品集×0.4 + 同行评议×0.2
+```
+
+#### 2.8.3 社区贡献初始信用Skill
+
+```
+社区可以提供替代的初始信用Skill：
+
+├─ @username/ai-assessment（AI评估）
+│  └─ 用AI分析作品集，自动评分
+│
+├─ @username/certificate-based（证书认证）
+│  └─ 认可外部证书（AWS/GCP/阿里云等）
+│
+└─ @username/community-vote（社区投票）
+    └─ 新人由社区成员投票评价
+
+特点：
+├─ 任何人都可以创建初始信用Skill
+├─ 发起人可以选择使用哪个Skill评估参与者
+├─ 社区贡献的Skill开源，可被审查
+└─ 用户可以选择多个初始信用Skill取平均
+```
+
+#### 2.8.4 初始信用与长期信用的关系
+
+```
+信用构成：
+├─ 初始信用（冷启动用）
+│  ├─ 来源：技能测试、作品集、同行评议
+│  ├─ 权重：随时间递减
+│  └─ 有效期：3-6个月
+│
+└─ 长期信用（历史记录）
+    ├─ 来源：项目完成、好评、惩罚
+    ├─ 权重：随时间递增
+    └─ 有效期：无（永久有效）
+
+最终信用 = 初始信用×衰减系数 + 长期信用
+```
+
+#### 2.8.5 初始信用Skill的特点
+
+```
+关键：初始信用评价体系本身也是开源的，可被社区修改/替代
+
+特点：
+├─ 可替代：社区可以提供更好的初始评价Skill
+├─ 可修改：算法开源，社区可以PR改进
+├─ 低权重：初始分只影响冷启动，长期信用更重要
+└─ 多选择：发起人可以选择使用哪个初始信用Skill
+
+对比：
+├─ 传统平台：平台决定初始信用，无法质疑
+└─ 本平台：初始信用Skill开源，社区共治
+```
+
 ---
 
 ## 三、Skill设计
